syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.marcusadriano";

service BrawlStars {
    rpc GetPlayer(BSPlayerRequest) returns (Player);
}

message BSPlayerRequest {
    string gameTag = 1;
}

message Player {
    bool isQualifiedFromChampionshipChallenge = 1;
    string tag = 2;
    string name = 3;
    int64 trophies = 4;
    int64 expLevel = 5;
    int64 expPoints = 6;
    int64 highestTrophies = 7;
    int64 powerPlayPoints = 8;
    int64 highestPowerPlayPoints = 9;
    int64 soloVictories = 10;
    int64 duoVictories = 11;
    int64 bestRoboRumbleTime = 12;
    int64 bestTimeAsBigBrawler = 13;
    bool success = 14;
    int64 threeVs3Victories = 15;
    repeated Brawler brawlers = 16;
    string nameColor = 17;
    Club club = 18;
    ApiError error = 19;

    message Club {
        string tag = 1;
        string name = 2;
    }

    message ApiError {
        string reason = 1;
        string message = 2;
        string type = 3;
        Detail detail = 4;

        message Detail {
        }
    }
}

message Brawler {
    repeated Item starPowers = 1;

    repeated Item gadgets = 2;
    int64 id = 3;
    int64 rank = 4;
    int64 trophies = 5;
    int64 highestTrophies = 6;
    int64 power = 7;
    string name = 8;

    message Item {
        string name = 1;
        int64 id = 2;
    }
}
